<resources>
    <string name="app_name">선물고리</string>
    <string name="title_calendar">달력</string>
    <string name="title_contacts">연락처</string>
    <string name="title_gallery">선물</string>
    <string name="image_description">Gallery image</string>
    <string name="occasion_assign_success">등록 성공!!</string>
    <string name="occasion_dismiss_success">삭제 성공!!</string>
    <string name="search">검색</string>
    <!-- Edit Contact Fragment -->
    <string name="edit_name">이름 수정</string>
    <string name="name_hint">이름을 입력하세요</string>
    <string name="edit_birthday">생일 수정</string>
    <string name="birthday_hint">생일을 선택하세요</string>
    <string name="edit_phone_number">전화번호 수정</string>
    <string name="phone_number_hint">전화번호를 입력하세요</string>
    <string name="present_history">선물 주고받은 기억들</string>
    <string name="delete_button">삭제 버튼</string>
    <string name="cancel">취소</string>
    <string name="apply">완료</string>
    <string name="present_history_button">선물 주고받은 기억들 버튼</string>
    <string name="cancel_button">취소 버튼</string>
    <string name="apply_button">완료 버튼</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="relationship">관계</string>
    <string name="select_relationship">관계를 선택하세요</string>
    <!-- Popup -->
    <string name="full_name">이름</string>
    <string name="birthday_yyyy_mm_dd">생일(yyyy-MM-dd)</string>
    <string name="edit_button">수정버튼</string>
    <string name="tel_phonenumber">전화번호: </string>
    <string name="recentcontact">최근 연락한 횟수</string>
    <string name="assign">기념일 알림받기</string>
    <string name="unassign">기념일 알림해제</string>
    <string name="buttonToGallary">추천 선물 확인하기</string>
    <!-- 드롭다운-->
    <string name="editGift">선물 종류</string>
    <string name="editGiftDate">선물 받은 날짜를 선택하세요</string>
    <string name="editPrice">가격</string>
    <string name="presentDelete">삭제</string>
    <string name="select_an_option">옵션을 선택하세</string>
    <string name="addButton">추가하기</string>
    <string name="occasionInput">여기에 기념일 종류를 입력하세요</string>
    <string name="occasionDateInput">기념일을 선택하세요</string>
    <string name="present_name">선물 이름</string>
    <string name="present_date">선물 받은 날짜</string>
    <string name="occasion_title">추가로 기념할 수 있는 날들이에요</string>
    <string name="present_title">그동안 선물 받은 목록이에요</string>
    <!-- 기념일 -->
    <string name="birthday">생일</string>
    <string name="parents_day">어버이날</string>"
    <string name="wedding_anniversary">결혼기념일</string>
    <string name="unknown">기타</string>

</resources>