<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 상단 프로필 영역 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- 이름 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="이름"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit_name"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <!-- 생일: 날짜 입력 방식 필요 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="생일"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/editBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/edit_birthday"
                    android:focusable="false"
                    android:hint="@string/birthday_hint"
                    android:padding="12dp"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/male"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/female"
                android:text="@string/female" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="전화번호"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/editPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/edit_phone_number"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:padding="12dp"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <!-- 관계 선택 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/relationship"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerRelationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/select_relationship"
            android:entries="@array/relationships" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <!-- Occasion 버튼 -->
        <include
            android:id="@+id/occasionDropdown"
            layout="@layout/custom_dropdown" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <!-- Present History 버튼 -->
        <include
            android:id="@+id/presentDropdown"
            layout="@layout/custom_dropdown" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- 하단 버튼 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/cancel_button"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/apply_button"
                android:text="@string/apply"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>