<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.tabs.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.tabs.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts"
        app:popUpToInclusive="true">
        <action
            android:id="@+id/contact_to_edit"
            app:destination="@id/navigation_edit_contact" />
    </fragment>


    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.tabs.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery">
        <argument
            android:name="contactIndex"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_contact"
        android:name="com.example.tabs.ui.contacts.edit.EditFragment"
        android:label="연락처 수정"
        tools:layout="@layout/fragment_edit">
        <action
            android:id="@+id/edit_to_contact"
            app:destination="@id/navigation_contacts" />
    </fragment>
</navigation>